Fix leaderboard layout: wrap in single grid item so Group 1/2 view does not squeeze table

--- a/css/bracket.css
+++ b/css/bracket.css
@@ -253,6 +253,13 @@
   white-space: nowrap;
 }
 
+/* Single full-width wrapper so tournament-grid doesn't split note + table into two columns */
+.tournament-grid .leaderboard-wrapper {
+  grid-column: 1 / -1;
+  min-width: 0;
+  width: 100%;
+}
+
 .leaderboard-rank-td {
   width: 100px;
   min-width: 100px;
